<resources>
    <string name="app_name">Neptune Client</string>

    <!-- Main Activity -->
    <string name="add_new_device">Add new device</string>
    <string name="menu_pair_text">Pair with a server</string>
    <string name="menu_rename_client_text">Rename client</string>
    <string name="menu_about_neptune_text">About Neptune</string>
    <string name="main_activity_device_ip">Device IP: %s</string>
    <string name="main_activity_friendly_name">Device name: %s</string>
    <string name="main_activity_version">Version: %s</string>

    <!-- Server entry (main activity) -->
...
